k8s/networking/01-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: app-ingress
  namespace: projeto-final
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx #Which Ingress controller to use
  tls:
    - hosts:
        - user.local.prod
        - product.local.prod
      secretName: inventory-tls
  rules: #Routing rules
    - host: user.local.prod #When user access this host, the following rules will be applied, must be defined in /etc/hosts file to work
      http:
        paths:
        - path: / #access any path (e.g. user.local.prod/login)
          pathType: Prefix
          backend:
            service:
              name: user-service 
              port:
                number: 5001
  
    - host: product.local.prod
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: product-service
              port:
                number: 5002
